Added recordset integration classes to support data object datasource agnosticism.  Added unit test project for data model objects.

--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -50,8 +50,10 @@
     <Compile Include="DataArgumentList.cs" />
     <Compile Include="DataConnector.cs" />
     <Compile Include="Data\IDataParameter.cs" />
+    <Compile Include="Data\IRecordsetIntegration.cs" />
     <Compile Include="Data\SqlDataParameter.cs" />
     <Compile Include="Data\SqlDataRecordset.cs" />
+    <Compile Include="Data\SqlRecordsetIntegration.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="GameObjectSchema.cs" />
     <Compile Include="Data\IDataRecordset.cs" />
