--- a/GMGameManager/App.config
+++ b/GMGameManager/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="GMGameManager.Properties.Settings.ConnString" connectionString="Data Source=RICHARD-DEV-PC;Initial Catalog=GMGameManagerData;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
